[package]
name = "busmust"
description = "Bindings to BusMust USB-CAN APIs"
authors = ["Dan Glastonbury <dglastonbury@mozilla.com>", "Sergey Anufrienko <serg@anufrienko.net>"]
version = "0.1.3"
license = "MIT/Apache-2.0"
repository = "https://github.com/madprogrammer/busmust-rs"
homepage = "https://github.com/madprogrammer/busmust-rs"
keywords = ["busmust", "can", "canfd", "isotp"]
categories = ["api-bindings"]

[dependencies]
busmust-sys = { path="../busmust-sys", version = "0.1.3" }
bitflags = "1"
clap = "4.1.8"

[dev-dependencies]
clap = "4.1.8"

[lib]
name = "busmust"
path = "src/lib.rs"
